[package]
name = "dirmask"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-server = "0.7.1"
log = "0.4.22"
rustls-acme = { version = "0.12.1", features = ["axum"] }
simple_logger = "5.0.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = { version = "*", features = ["net"] }
